--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,19 @@
+# Maven generated
 target/
+
+# Eclipse generated
 .apt_generated/
 .settings/
 .project
 .classpath
 .factorypath
 MANIFEST.MF
-README.html
+
+# MacOS system files
 .DS_Store
+
+# Asciidoc rendered
+README.html
+
+# Zip files
+*.zip
