--- a/finish/src/main/webapp/META-INF/microprofile-config.properties
+++ b/finish/src/main/webapp/META-INF/microprofile-config.properties
@@ -1,2 +1,2 @@
 mp.openapi.scan.disable = false
-mp.openapi.filter = io.openliberty.guides.inventory.filter.InventoryOASFilter
+#mp.openapi.filter = io.openliberty.guides.inventory.filter.InventoryOASFilter
