--- a/start/pom.xml
+++ b/start/pom.xml
@@ -105,9 +105,10 @@
                 <configuration>
                     <!-- Temporarilty build from downloaded runtime until its 18.0.0.1 is realeased -->
                     <install>
-                        <runtimeUrl>https://public.dhe.ibm.com/ibmdl/export/pub/software/openliberty/runtime/nightly/2018-02-26_-0400/openliberty-all-18.0.0.1-20180226-0349.zip</runtimeUrl>
+                        <runtimeUrl>https://public.dhe.ibm.com/ibmdl/export/pub/software/openliberty/runtime/nightly/2018-03-12_0807/openliberty-all-18.0.0.1-201803120756.zip</runtimeUrl>
                         <licenseCode>L-SWIS-A99U5C</licenseCode>
                     </install>
+                    <!-- <assemblyArchive>../../wlp.zip</assemblyArchive> -->
 <!--                     <assemblyArtifact>
                         <groupId>io.openliberty</groupId>
                         <artifactId>openliberty-runtime</artifactId>
