--- a/finish/src/main/webapp/META-INF/microprofile-config.properties
+++ b/finish/src/main/webapp/META-INF/microprofile-config.properties
@@ -1,2 +1,5 @@
+# tag::config[]
+io.openliberty.guides.inventory.client.SystemClient/mp-rest/url=http://localhost:9080/inventory
 mp.openapi.scan.disable = true
 mp.openapi.filter = io.openliberty.guides.inventory.filter.InventoryOASFilter
+# end::config[]
