--- a/finish/src/main/webapp/META-INF/microprofile-config.properties
+++ b/finish/src/main/webapp/META-INF/microprofile-config.properties
@@ -1,4 +1,4 @@
 # tag::config[]
-mp.openapi.scan.disable = false
+mp.openapi.scan.disable = true
 mp.openapi.filter = io.openliberty.guides.inventory.filter.InventoryOASFilter
 # end::config[]
