--- a/start/pom.xml
+++ b/start/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <groupId>io.openliberty.guides</groupId>
-    <artifactId>mp-openapi</artifactId>
+    <artifactId>guide-microprofile-openapi</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
