--- a/finish/src/main/webapp/META-INF/microprofile-config.properties
+++ b/finish/src/main/webapp/META-INF/microprofile-config.properties
@@ -1,4 +1,6 @@
+# tag::scan[]
 mp.openapi.scan.disable = true
+# end::scan[]
 # tag::config[]
 mp.openapi.filter = io.openliberty.guides.inventory.filter.InventoryOASFilter
 # end::config[]
