--- a/finish/src/main/webapp/META-INF/microprofile-config.properties
+++ b/finish/src/main/webapp/META-INF/microprofile-config.properties
@@ -1,6 +1,6 @@
-# tag::scan[]
+# tag::Scan[]
 mp.openapi.scan.disable = true
-# end::scan[]
-# tag::config[]
+# end::Scan[]
+# tag::Config[]
 mp.openapi.filter = io.openliberty.guides.inventory.filter.InventoryOASFilter
-# end::config[]
+# end::Config[]
