--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Test application
 
 on:
@@ -24,7 +21,7 @@ jobs:
           java-version: ${{ matrix.jdk }}
       - run: unset _JAVA_OPTIONS
       - name: Run tests
-        run: chmod +x ../scripts/testApp.sh && ../scripts/testApp.sh
+        run: ../scripts/testApp.sh
       - name: Post tests
         if: always()
         run: |
